Corrects element sizing on mobile

--- a/css/about.css
+++ b/css/about.css
@@ -535,7 +535,7 @@ Celeste: #5fb2a6
     
         .about-section3 {
             top: 105vh;
-            left: 10vw;
+            left: 20vw;
         }
     
         .green-box2 {
