--- a/css/graphic.css
+++ b/css/graphic.css
@@ -102,7 +102,7 @@ Celeste: #5fb2a6
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 50vh;
+      height: 50vw;
       width: 50vw;
       overflow: hidden;
       margin: 0.5vw;
@@ -137,7 +137,7 @@ Celeste: #5fb2a6
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 50vh;
+      height: 50vw;
       width: 38vw;
       overflow: hidden;
       margin: 0.5vw;
@@ -172,7 +172,7 @@ Celeste: #5fb2a6
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 50vh;
+      height: 50vw;
       width: 29vw;
       overflow: hidden;
       margin: 0.5vw;
@@ -207,7 +207,7 @@ Celeste: #5fb2a6
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 50vh;
+      height: 50vw;
       width: 29vw;
       overflow: hidden;
       margin: 0.5vw;
@@ -242,7 +242,7 @@ Celeste: #5fb2a6
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 50vh;
+      height: 50vw;
       width: 29vw;
       overflow: hidden;
       margin: 0.5vw;
