--- a/css/graphicArticle.css
+++ b/css/graphicArticle.css
@@ -75,7 +75,7 @@ Celeste: #5fb2a6
     /* ____________ Splash ____________ */
 
     .splash-img-apothechairy {
-        height: 45vh;
+        height: 45vw;
         width: 90vw;
         margin: 0 0 5vh 0;
         background-image: url('/images/graphicDesign/ApothecHairy_BeardedLady_2_Transparent.png');
@@ -86,7 +86,7 @@ Celeste: #5fb2a6
     }
 
     .splash-img-celeste {
-        height: 45vh;
+        height: 45vw;
         width: 90vw;
         margin: 0 0 5vh 0;
         background-image: url('/images/graphicDesign/leaves.png');
@@ -97,7 +97,7 @@ Celeste: #5fb2a6
     }
 
     .splash-img-bitspieces {
-        height: 45vh;
+        height: 45vw;
         width: 90vw;
         margin: 0 0 5vh 0;
         background-image: url('/images/graphicDesign/Bits_and_Pieces.png');
@@ -108,7 +108,7 @@ Celeste: #5fb2a6
     }
 
     .splash-img-tractu {
-        height: 45vh;
+        height: 45vw;
         width: 90vw;
         margin: 0 0 5vh 0;
         background-image: url('/images/graphicDesign/tractuLogo.png');
@@ -196,7 +196,7 @@ Celeste: #5fb2a6
     }
     
     .graphic-imgs-doodles {
-        height: 45vh;
+        height: 45vw;
         width: auto;
         margin: .25vw;
         box-shadow: 0px 0px 7px -2px #BABABA;
